--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </div>
 
     <div class="likeness-input" ng-show="likenessInput">
+      Enter the likeness of this wrong password
       <input type="number" ng-model="likeness">
       <input type="button" ng-click="confirmInsertion()" value="OK">
     </div>
