--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html ng-app="fhaApp">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <title>Fallout hacker assistant</title>
     <link rel="stylesheet" href="assets/index.css" />
     <script type="text/javascript" src="index.js"></script>
